Agregado registro de año

--- a/src/app/00078-GestionPlanillas/WebApp/Views/Periodos/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Periodos/Index.cshtml
@@ -15,7 +15,10 @@
     <div class="card mb-4">
         <div class="card-header">
             <span class="h4">Periodos</span>
-            <a href="@Url.Action("Nuevo", "Periodos")" class="btn btn-primary pull-right modal-link">
+            <a href="@Url.Action("NuevoAnio", "Periodos")" class="btn btn-primary pull-right modal-link">
+                <i class="fa fa-plus-circle" aria-hidden="true"></i> Nuevo año
+            </a>
+            <a href="@Url.Action("Nuevo", "Periodos")" class="btn btn-primary pull-right modal-link mr-1">
                 <i class="fa fa-plus-circle" aria-hidden="true"></i> Nuevo periodo
             </a>
         </div>
