Agregado interfaz para el mantenimiento de modales y metas

--- a/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanilla/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/PlantillaPlanilla/Index.cshtml
@@ -87,13 +87,15 @@
             generarDatatableConceptos();
             generarDatatablePlantillasPlanilla();
 
-            $(".modal").on('hide.bs.modal', function () {
-                generarDatatableConceptos();
-            });
 
-            $(".modal").on('hide.bs.modal', function () {
-                generarDatatablePlantillasPlanilla();
-            });
+            //CORREGIR CIERRE DE MODALES
+            //$(".modal").on('hide.bs.modal', function () {
+            //    generarDatatableConceptos();
+            //});
+
+            //$(".modal").on('hide.bs.modal', function () {
+            //    generarDatatablePlantillasPlanilla();
+            //});
         });
 
         function generarDatatableConceptos() {
