--- a/src/app/00078-GestionPlanillas/WebApp/Views/DepActividadesMetas/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/DepActividadesMetas/Index.cshtml
@@ -12,7 +12,75 @@
         </section>
     </div>
 
-    <div class="card mb-4">
+    <div class="row">
+        <div class="col-lg-6 col-md-12 mb-4">
+            <div class="card">
+                <div class="card-header">
+                    <span class="h4">Actividades</span>
+                    <a href="@Url.Action("Nuevo", "Actividades")" class="btn btn-primary pull-right modal-link">
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i> Nueva actividad
+                    </a>
+                </div>
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table class="table table-hover" id="dataTableActividades" width="100%">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th>Cod.Actividad</th>
+                                    <th>Descripción</th>
+                                    <th></th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tfoot>
+                                <tr>
+                                    <th>Cod.Actividad</th>
+                                    <th>Descripción</th>
+                                    <th></th>
+                                    <th></th>
+                                </tr>
+                            </tfoot>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-6 col-md-12 mb-4">
+            <div class="card">
+                <div class="card-header">
+                    <span class="h4">Metas</span>
+                    <a href="@Url.Action("Nuevo", "Metas")" class="btn btn-primary pull-right modal-link">
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i> Nueva meta
+                    </a>
+                </div>
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table class="table table-hover" id="dataTableMetas" width="100%">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th>Cod.Meta</th>
+                                    <th>Descripción</th>
+                                    <th></th>
+                                    <th></th>
+                                </tr>
+                            </thead>
+                            <tfoot>
+                                <tr>
+                                    <th>Cod.Meta</th>
+                                    <th>Descripción</th>
+                                    <th></th>
+                                    <th></th>
+                                </tr>
+                            </tfoot>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="card">
         <div class="card-header">
             <span class="h4">Actividades y Metas</span>
             <a href="@Url.Action("Nuevo", "DepActividadesMetas")" class="btn btn-primary pull-right modal-link">
@@ -62,10 +130,22 @@
     <script type="text/javascript">
         $(document).ready(function () {
             generarDataTableDepActividadesMetas();
+            generarDataTableActividades();
+            generarDataTableMetas();
 
-            $(".modal").on('hide.bs.modal', function () {
-                generarDataTableDepActividadesMetas();
-            });
+
+            //CORREGIR CIERRE DE MODALES
+            //$(".modal").on('hide.bs.modal', function () {
+            //    generarDataTableDepActividadesMetas();
+            //});
+
+            //$(".modal > #dataTableActividades").on('hide.bs.modal', function () {
+            //    generarDataTableActividades();
+            //});
+
+            //$(".modal > #dataTableMetas").on('hide.bs.modal', function () {
+            //    generarDataTableMetas();
+            //});
 
             $('#dataTableDepActividadesMetas').on('click', '.btn-eliminar', function (event) {
                 event.preventDefault();
@@ -105,7 +185,87 @@
                     }
                 });
             });
+
+            $('#dataTableActividades').on('click', '.btn-eliminar-actividad', function (event) {
+                event.preventDefault();
+
+                let id = $(this).data("id");
+                let token = $('input[name="__RequestVerificationToken"]').val();
+
+                Swal.fire({
+                    title: '',
+                    text: '¿Desea eliminar este registro?',
+                    icon: MENSAJE.WARNING,
+                    showCancelButton: true,
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: 'Si, continuar.',
+                    cancelButtonText: 'No, cancelar.'
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        $.ajax({
+                            url: '@Url.Action("Eliminar", "Actividades")/' + id,
+                            type: "POST",
+                            data: { __RequestVerificationToken: token },
+                            beforeSend: function () {
+                            },
+                            success: function (data) {
+                                if (data.Success) {
+                                    mostrarMensajeSistema(data.Message, MENSAJE.SUCCESS);
+                                    generarDataTableActividades();
+                                } else {
+                                    mostrarMensajeSistema(data.Message, MENSAJE.ERROR);
+                                }
+                            },
+                            error: function (jqXHR, textStatus, errorThrown) {
+                                toastr.error(errorThrown);
+                            }
+                        });
+                    }
+                });
+            });
+
+            $('#dataTableMetas').on('click', '.btn-eliminar-meta', function (event) {
+                event.preventDefault();
+
+                let id = $(this).data("id");
+                let token = $('input[name="__RequestVerificationToken"]').val();
+
+                Swal.fire({
+                    title: '',
+                    text: '¿Desea eliminar este registro?',
+                    icon: MENSAJE.WARNING,
+                    showCancelButton: true,
+                    confirmButtonColor: '#3085d6',
+                    cancelButtonColor: '#d33',
+                    confirmButtonText: 'Si, continuar.',
+                    cancelButtonText: 'No, cancelar.'
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                        $.ajax({
+                            url: '@Url.Action("Eliminar", "Metas")/' + id,
+                            type: "POST",
+                            data: { __RequestVerificationToken: token },
+                            beforeSend: function () {
+                            },
+                            success: function (data) {
+                                if (data.Success) {
+                                    mostrarMensajeSistema(data.Message, MENSAJE.SUCCESS);
+                                    generarDataTableMetas();
+                                } else {
+                                    mostrarMensajeSistema(data.Message, MENSAJE.ERROR);
+                                }
+                            },
+                            error: function (jqXHR, textStatus, errorThrown) {
+                                toastr.error(errorThrown);
+                            }
+                        });
+                    }
+                });
+            });
         });
+
+
 
         function generarDataTableDepActividadesMetas() {
             $('#dataTableDepActividadesMetas').DataTable({
@@ -195,6 +355,122 @@
                         });
                     });
                 }
+            });
+        }
+
+        function generarDataTableActividades() {
+            $('#dataTableActividades').DataTable({
+                ajax: {
+                    'url': '@Url.Action("ObtenerListaActividades", "Actividades")',
+                    'type': 'get'
+                },
+                columns: [
+                    { data: 'actividadCod' },
+                    { data: 'actividadDesc' },
+                    { data: 'actividadID', width: '10%' },
+                    { data: 'actividadID', width: '10%' }
+                ],
+                columnDefs: [
+                    {
+                        targets: -2,
+                        orderable: false,
+                        render: function (data, type, row) {
+                            return `<a class="modal-link" href="@Url.Action("Editar", "Actividades")/${data}` +
+                                '"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> <span class="d-none d-md-inline-block">Editar</span></a>';
+                        }
+                    },
+                    {
+                        targets: -1,
+                        orderable: false,
+                        render: function (data, type, row) {
+                            return `<a class="btn-eliminar-actividad" href="#" data-id="${data}"` +
+                                '" title="Eliminar"><i class="fa fa-trash" aria-hidden="true"></i> <span class="d-none d-md-inline-block">Eliminar</span></a>';
+                        }
+                    }
+                ],
+                bStateSave: true,
+                bDestroy: true,
+                lengthMenu: [[5, 10, 25, 50, -1], [5, 10, 25, 50, "Todas"]],
+                iDisplayLength: 10,
+                language: {
+                    search: "Buscar: ",
+                    lengthMenu: "Mostrar _MENU_ filas",
+                    info: "Mostrando del _START_ al _END_ de _TOTAL_ elementos.",
+                    infoEmpty: "No se encontraron registros.",
+                    zeroRecords: "No hay data disponible.",
+                    emptyTable: "No hay data disponible.",
+                    paginate: {
+                        first: "Primero",
+                        previous: "Previo",
+                        next: "Siguiente",
+                        last: "Último"
+                    },
+                    aria: {
+                        sortAscending: ": activar para ordenar la columna en orden ascendente",
+                        sortDescending: ": activar para ordenar la columna en orden descendente"
+                    },
+                    loadingRecords: "Cargando...",
+                    processing: "Procesando..."
+                },
+                searching: true
+            });
+        }
+
+        function generarDataTableMetas() {
+            $('#dataTableMetas').DataTable({
+                ajax: {
+                    'url': '@Url.Action("ObtenerListaMetas", "Metas")',
+                    'type': 'get'
+                },
+                columns: [
+                    { data: 'metaCod' },
+                    { data: 'metaDesc' },
+                    { data: 'metaID', width: '10%' },
+                    { data: 'metaID', width: '10%' }
+                ],
+                columnDefs: [
+                    {
+                        targets: -2,
+                        orderable: false,
+                        render: function (data, type, row) {
+                            return `<a class="modal-link" href="@Url.Action("Editar", "Metas")/${data}` +
+                                '"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> <span class="d-none d-md-inline-block">Editar</span></a>';
+                        }
+                    },
+                    {
+                        targets: -1,
+                        orderable: false,
+                        render: function (data, type, row) {
+                            return `<a class="btn-eliminar-meta" href="#" data-id="${data}"` +
+                                '" title="Eliminar"><i class="fa fa-trash" aria-hidden="true"></i> <span class="d-none d-md-inline-block">Eliminar</span></a>';
+                        }
+                    }
+                ],
+                bStateSave: true,
+                bDestroy: true,
+                lengthMenu: [[5, 10, 25, 50, -1], [5, 10, 25, 50, "Todas"]],
+                iDisplayLength: 10,
+                language: {
+                    search: "Buscar: ",
+                    lengthMenu: "Mostrar _MENU_ filas",
+                    info: "Mostrando del _START_ al _END_ de _TOTAL_ elementos.",
+                    infoEmpty: "No se encontraron registros.",
+                    zeroRecords: "No hay data disponible.",
+                    emptyTable: "No hay data disponible.",
+                    paginate: {
+                        first: "Primero",
+                        previous: "Previo",
+                        next: "Siguiente",
+                        last: "Último"
+                    },
+                    aria: {
+                        sortAscending: ": activar para ordenar la columna en orden ascendente",
+                        sortDescending: ": activar para ordenar la columna en orden descendente"
+                    },
+                    loadingRecords: "Cargando...",
+                    processing: "Procesando..."
+                },
+                searching: true
             });
         }
     </script>
