--- a/src/app/00078-GestionPlanillas/WebApp/Views/Periodos/Index.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Periodos/Index.cshtml
@@ -52,9 +52,11 @@
         $(document).ready(function () {
             generarDataTablePeriodos();
 
-            $(".modal").on('hide.bs.modal', function () {
-                generarDataTablePeriodos();
-            });
+
+            //CORREGIR CIERRE DE MODALEAS
+            //$(".modal").on('hide.bs.modal', function () {
+            //    generarDataTablePeriodos();
+            //});
 
             $('#dataTablePeriodos').on('click', '.btn-eliminar', function (event) {
                 event.preventDefault();
