--- a/src/app/00078-GestionPlanillas/WebApp/Views/Periodos/_MantenimientoAño.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Periodos/_MantenimientoAño.cshtml
@@ -43,3 +43,7 @@
         <i class="fa fa-times-circle-o"></i> Cerrar
     </button>
 </div>
+
+<script type="text/javascript">
+    modalActivo = "modal-año";
+</script>
