--- a/src/app/00078-GestionPlanillas/WebApp/Views/Periodos/_MantenimientoPeriodo.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Periodos/_MantenimientoPeriodo.cshtml
@@ -56,3 +56,7 @@
         <i class="fa fa-times-circle-o"></i> Cerrar
     </button>
 </div>
+
+<script type="text/javascript">
+    modalActivo = "modal-periodo";
+</script>
