--- a/src/app/00078-GestionPlanillas/WebApp/Views/Conceptos/_MantenimientoConcepto.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Conceptos/_MantenimientoConcepto.cshtml
@@ -47,7 +47,7 @@
                 </div>
             </div>
         </div>
-        
+
         <div class="form-row">
             <div class="col-12">
                 <div class="form-group">
@@ -76,3 +76,7 @@
         <i class="fa fa-times-circle-o"></i> Cerrar
     </button>
 </div>
+
+<script type="text/javascript">
+    modalActivo = "modal-concepto";
+</script>
