--- a/src/app/00078-GestionPlanillas/WebApp/Views/DepActividadesMetas/_MantenimientoDepActividadMeta.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/DepActividadesMetas/_MantenimientoDepActividadMeta.cshtml
@@ -47,7 +47,7 @@
                 </div>
             </div>
         </div>
-        
+
         <div class="form-row">
             <div class="col-12">
                 <div class="form-group">
@@ -108,6 +108,8 @@
 </div>
 
 <script type="text/javascript">
+    modalActivo = "modal-dependencia-actividad-meta";
+
     $(document).ready(function () {
         $('.select-filter-modal').select2({
             theme: 'bootstrap4',
