--- a/src/app/00078-GestionPlanillas/WebApp/Views/Metas/_MantenimientoMeta.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Metas/_MantenimientoMeta.cshtml
@@ -37,7 +37,7 @@
                 </div>
             </div>
         </div>
-        
+
         <div class="row d-flex justify-content-center">
             <button type="submit" class="btn btn-primary center" id="btnsubmit"><i class="fa fa-save"></i> Guardar</button>
         </div>
@@ -56,3 +56,7 @@
         <i class="fa fa-times-circle-o"></i> Cerrar
     </button>
 </div>
+
+<script type="text/javascript">
+    modalActivo = "modal-meta";
+</script>
