--- a/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
@@ -24,7 +24,8 @@
                 <i class="fa fa-fw fa-bar-chart"></i> Reportes<span class="pull-right"><i class="fa fa-fw fa-caret-down"></i></span>
             </a>
             <ul id="reports" class="collapse">
-                <li><a href="@Url.Action("Index", "Planillas")"><i class="fa fa-table"></i> Planillas generadas</a></li>
+                <li><a href="@Url.Action("Resumen", "Planillas")"><i class="fa fa-table"></i> Planillas generadas</a></li>
+                <li><a href="@Url.Action("TotalDependencia", "Planillas")"><i class="fa bi-building"></i> Total dependencia</a></li>
             </ul>
         </li>
         <li class="nav-item">
