Avance reporte resumen SIAF

--- a/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
@@ -26,6 +26,7 @@
             <ul id="reports" class="collapse">
                 <li><a href="@Url.Action("Resumen", "Planillas")"><i class="fa fa-table"></i> Planillas generadas</a></li>
                 <li><a href="@Url.Action("TotalDependencia", "Planillas")"><i class="fa bi-building"></i> Total dependencia</a></li>
+                <li><a href="@Url.Action("ResumenSIAF", "Planillas")"><i class="fa fa-table"></i> Resumen SIAF</a></li>
             </ul>
         </li>
         <li class="nav-item">
