--- a/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
@@ -25,7 +25,7 @@
             </a>
             <ul id="reports" class="collapse">
                 <li><a href="@Url.Action("Resumen", "Planillas")"><i class="fa fa-table"></i> Planillas generadas</a></li>
-                <li><a href="@Url.Action("TotalDependencia", "Planillas")"><i class="fa bi-building"></i> Total dependencia</a></li>
+                <li><a href="@Url.Action("ResumenDependencia", "Planillas")"><i class="fa bi-building"></i> Resumen por dependencia</a></li>
                 <li><a href="@Url.Action("ResumenSIAF", "Planillas")"><i class="fa fa-table"></i> Resumen SIAF</a></li>
             </ul>
         </li>
