--- a/src/app/00078-GestionPlanillas/WebApp/Views/Reportes/ResumenPlanilla.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Reportes/ResumenPlanilla.cshtml
@@ -17,7 +17,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-body bg-light-gray">
-                        @using (Html.BeginForm("Resumen", "Planillas", FormMethod.Get, new { id = "frmConsultaResumenPlanilla" }))
+                        @using (Html.BeginForm("ResumenPlanilla", "Reportes", FormMethod.Get, new { id = "frmConsultaResumenPlanilla" }))
                         {
                             <div class="form-row">
                                 <div class="form-group col-lg-2 col-md-4 col-6">
@@ -119,7 +119,7 @@
 
             $('#dataTablePlanilla').DataTable({
                 ajax: {
-                    'url': '@Url.Action("ObtenerListaTrabajadoreConPlanilla", "Planillas")',
+                    'url': '@Url.Action("ObtenerListaTrabajadoreConPlanilla", "Reportes")',
                     'data': parametros,
                     'type': 'get'
                 },
