--- a/src/app/00078-GestionPlanillas/WebApp/Views/Reportes/ResumenSIAF.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Reportes/ResumenSIAF.cshtml
@@ -19,7 +19,7 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-body bg-light-gray">
-                        @using (Html.BeginForm("ResumenSIAF", "Planillas", FormMethod.Get, new { id = "frmConsultaResumenSIAF" }))
+                        @using (Html.BeginForm("ResumenSIAF", "Reportes", FormMethod.Get, new { id = "frmConsultaResumenSIAF" }))
                         {
                             <div class="form-row">
                                 <div class="form-group col-lg-2 col-md-4 col-6">
