--- a/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
+++ b/src/app/00078-GestionPlanillas/WebApp/Views/Shared/_Sidebar.cshtml
@@ -24,9 +24,9 @@
                 <i class="fa fa-fw fa-bar-chart"></i> Reportes<span class="pull-right"><i class="fa fa-fw fa-caret-down"></i></span>
             </a>
             <ul id="reports" class="collapse">
-                <li><a href="@Url.Action("Resumen", "Planillas")"><i class="fa fa-table"></i> Planillas generadas</a></li>
-                <li><a href="@Url.Action("ResumenDependencia", "Planillas")"><i class="fa bi-building"></i> Resumen por dependencia</a></li>
-                <li><a href="@Url.Action("ResumenSIAF", "Planillas")"><i class="fa fa-table"></i> Resumen SIAF</a></li>
+                <li><a href="@Url.Action("ResumenPlanilla", "Reportes")"><i class="fa fa-table"></i> Planillas generadas</a></li>
+                <li><a href="@Url.Action("ResumenActividadYDependencia", "Reportes")"><i class="fa bi-building"></i> Resumen por dependencia</a></li>
+                <li><a href="@Url.Action("ResumenSIAF", "Reportes")"><i class="fa fa-table"></i> Resumen SIAF</a></li>
             </ul>
         </li>
         <li class="nav-item">
